recommit prev commits for white show

--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,10 @@
       "destination": "/index.html"
     }
   ],
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/(.*)", "dest": "/" }
+  ],
   "headers": [
     {
       "source": "/assets/(.*)",
